--- a/package.json
+++ b/package.json
@@ -62,6 +62,11 @@
           "type": "string",
           "default": "",
           "description": "Absolute path to cli_logcat.sh"
+        },
+        "cursorAndroidLogcat.debug": {
+          "type": "boolean",
+          "default": true,
+          "description": "Enable debug logs in status bar and console"
         }
       }
     }
