[feature]Refactor Android logcat webview to improve filtering and build stability [why] none [how]none [influence] none [jira]SCS_SXGF-18449

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "cursor-android-logcat",
   "displayName": "Android Logcat (Cursor)",
   "description": "Minimal Android Logcat panel integrated with your cli_logcat.sh",
-  "version": "1.0.46",
+  "version": "1.0.55",
   "publisher": "edward-local",
   "repository": {
     "type": "git",
-    "url": "https://example.com/edward-local/cursor-android-logcat.git"
+    "url": "https://github.com/edward-local/cursor-android-logcat.git"
   },
   "engines": {
     "vscode": "^1.99.0"
@@ -79,8 +79,8 @@
   "scripts": {
     "compile": "tsc -p ./",
     "watch": "tsc -w -p ./",
-    "vscode:prepublish": "node ./scripts/bump-version-and-prepare.mjs && nohup node ./scripts/move-vsix-once.mjs >/dev/null 2>&1 & npm run compile",
-    "package": "npm run compile && npx --yes @vscode/vsce package && node ./scripts/move-vsix-once.mjs"
+    "vscode:prepublish": "node ./scripts/bump-version-and-prepare.mjs && npm run compile",
+    "package": "npm run compile && npx --yes @vscode/vsce package --baseContentUrl https://raw.githubusercontent.com/edward-local/cursor-android-logcat/main --baseImagesUrl https://raw.githubusercontent.com/edward-local/cursor-android-logcat/main && node ./scripts/move-vsix-once.mjs"
   },
   "devDependencies": {
     "@types/node": "^18.19.123",
